--- a/users/templates/authorRecipe.html
+++ b/users/templates/authorRecipe.html
@@ -1,12 +1,12 @@
 {% extends "base.html" %}
-{% block title %} Избранное {% endblock %}
+{% block title %} Рецепты {% endblock %}
 {% load static %}
-{% block static %} 
+{% block static %}
     <link rel="stylesheet" href="{% static 'pages/index.css' %}">
 {% endblock %}
 {% block content %}
 <div class="main__header">
-    <h1 class="main__title">Избранное</h1>
+    <h1 class="main__title">{{ profile.username }}</h1>
     <ul class="tags">
         <li class="tags__item">
             <a id="breakfast" class="tags__checkbox tags__checkbox_style_orange tags__checkbox_active" href="#"></a>
@@ -21,25 +21,27 @@
             <label for="dinner" class="tags__label">Ужин</label>
         </li>
     </ul>
+
 </div>
+<p style="padding: 0 0 2em 0;"><a class="button button_style_light-blue" href="#">Подписаться на автора</a></p>
 <div class="card-list">
     {% for recipe in page %}
         {% include "recipe_item.html" with recipe=recipe %}
-    {% endfor %}   
+    {% endfor %}
 </div>
 {% if page.has_other_pages %}
     {% include "paginator.html" with items=page paginator=paginator %}
 {% endif %}
 {% endblock %}
 {% block scripts %}
-<script src="{% static 'js/components/MainCards.js' %}"></script>
+  <script src="{% static 'js/components/MainCards.js' %}"></script>
 
-<script src="{% static 'js/components/Purchpurachases.js' %}"></script>
-<script src="{% static 'js/components/Favorites.js' %}"></script>
+  <script src="{% static 'js/components/Purchpurachases.js' %}"></script>
+  <script src="{% static 'js/components/Favorites.js' %}"></script>
 
-<script src="{% static 'js/components/CardList.js' %}"></script>
-<script src="{% static 'js/components/Header.js' %}"></script>
+  <script src="{% static 'js/components/CardList.js' %}"></script>
+  <script src="{% static 'js/components/Header.js' %}"></script>
 
-<script src="{% static 'js/api/Api.js' %}"></script>
-<script src="{% static 'js/favorite.js' %}"></script>
-{% endblock %}
+  <script src="{% static 'js/api/Api.js' %}"></script>
+  <script src="{% static 'js/indexAuth.js' %}"></script>
+  {% endblock %}
