--- a/recipes/templates/index.html
+++ b/recipes/templates/index.html
@@ -32,19 +32,18 @@
 {% endif %}
 {% endblock %}
 {% block scripts %}
-    {% if user.is_authenticated %}
-        <script src="{% static 'js/indexAuth.js' %}"></script>
-        <script src="{% static 'js/components/Favorites.js' %}"></script>
-    {% else %}
-        <script src="{% static 'js/indexNotAuth.js' %}"></script>
-    {% endif %}
-
+    <script src="{% static 'js/config/config.js' %}"></script>
     <script src="{% static 'js/components/MainCards.js' %}"></script>
-
     <script src="{% static 'js/components/Purchpurachases.js' %}"></script>
-
+    {% if user.is_authenticated %}
+        <script src="{% static 'js/components/Favorites.js' %}"></script>
+    {% endif %}
     <script src="{% static 'js/components/CardList.js' %}"></script>
     <script src="{% static 'js/components/Header.js' %}"></script>
-
     <script src="{% static 'js/api/Api.js' %}"></script>
+    {% if user.is_authenticated %}
+        <script src="{% static 'js/indexAuth.js' %}"></script>
+    {% else %}
+        <script src="{% static 'js/indexNotAuth.js' %}"></script>
+    {% endif %} 
 {% endblock %}
