--- a/templates/paginator.html
+++ b/templates/paginator.html
@@ -1,7 +1,7 @@
 <nav class="pagination" aria-label="Search results pages">
     <ul class="pagination__container">
         {% if items.has_previous %}
-        <li class="pagination__item"><a class="pagination__link link" href="?page={{ items.previous_page_number }}"><span class="icon-left"></span></a></li>
+            <li class="pagination__item"><a class="pagination__link link" href="?page={{ items.previous_page_number }}"><span class="icon-left"></span></a></li>
         {% endif %}
         {% for i in paginator.page_range %}
             {% if items.number == i %}
@@ -11,7 +11,7 @@
             {% endif %}
         {% endfor %} 
         {% if items.has_next %}
-            <li class="pagination__item"><a class="pagination__link link" href="#"><span class="icon-right"></span></a></li>
+            <li class="pagination__item"><a class="pagination__link link" href="?page={{ items.next_page_number }}"><span class="icon-right"></span></a></li>
         {% endif %}
     </ul>
 </nav>
