favorites, shoplist, subscriptions

--- a/recipes/templates/favorite.html
+++ b/recipes/templates/favorite.html
@@ -32,6 +32,7 @@
 {% endif %}
 {% endblock %}
 {% block scripts %}
+<script src="{% static 'js/config/config.js' %}"></script>
 <script src="{% static 'js/components/MainCards.js' %}"></script>
 
 <script src="{% static 'js/components/Purchpurachases.js' %}"></script>
