--- a/recipes/templates/recipe_item.html
+++ b/recipes/templates/recipe_item.html
@@ -1,7 +1,8 @@
+{% csrf_token %}
 <div class="card" data-id="{{ recipe.id }}">
-    <a href="{% url 'recipe_page' recipe.id %}" class="link" target="_blank"><img src="{{ recipe.image.url }}" alt="{{ recipe.title }}" class="card__image"></a>
+    <a href="{% url 'recipe_page' recipe.id %}" class="link"><img src="{{ recipe.image.url }}" alt="{{ recipe.title }}" class="card__image"></a>
     <div class="card__body">
-        <a class="card__title link" href="{% url 'recipe_page' recipe.id %}" target="_blank">{{ recipe.title }}</a>
+        <a class="card__title link" href="{% url 'recipe_page' recipe.id %}">{{ recipe.title }}</a>
         <ul class="card__items">
             {% for tag in recipe.tags.all %}
                 <li class="card__item"><span class="badge badge_style_{{ tag.color }}">{{ tag.title }}</span></li>
@@ -13,9 +14,17 @@
         </div>
     </div>
     <div class="card__footer">
-        <button class="button button_style_light-blue" name="purchpurchases" data-out><span class="icon-plus button__icon"></span>Добавить в покупки</button>
+        {% if recipe not in shop_list %}
+            <button class="button button_style_light-blue" name="purchpurchases" data-out><span class="icon-plus button__icon"></span>Добавить в покупки</button>
+        {% else %}
+            <button class="button button_style_light-blue-outline" name="purchpurchases"><span class="icon-check button__icon"></span>Рецепт добавлен</button>
+        {% endif %}
         {% if user.is_authenticated %}
-            <button class="button button_style_none" name="favorites" data-out><span class="icon-favorite"></span></button>
+            {% if recipe not in favorites_list %}
+                <button class="button button_style_none" name="favorites" data-out><span class="icon-favorite"></span></button>
+            {% else %}
+                <button class="button button_style_none" name="favorites"><span class="icon-favorite icon-favorite_active"></span></button>
+            {% endif %}
         {% endif %}
     </div>
 </div>
