--- a/users/templates/authorRecipe.html
+++ b/users/templates/authorRecipe.html
@@ -34,14 +34,15 @@
 {% endif %}
 {% endblock %}
 {% block scripts %}
-  <script src="{% static 'js/components/MainCards.js' %}"></script>
+<script src="{% static 'js/config/config.js' %}"></script>
+<script src="{% static 'js/components/MainCards.js' %}"></script>
 
-  <script src="{% static 'js/components/Purchpurachases.js' %}"></script>
-  <script src="{% static 'js/components/Favorites.js' %}"></script>
+<script src="{% static 'js/components/Purchpurachases.js' %}"></script>
+<script src="{% static 'js/components/Favorites.js' %}"></script>
 
-  <script src="{% static 'js/components/CardList.js' %}"></script>
-  <script src="{% static 'js/components/Header.js' %}"></script>
+<script src="{% static 'js/components/CardList.js' %}"></script>
+<script src="{% static 'js/components/Header.js' %}"></script>
 
-  <script src="{% static 'js/api/Api.js' %}"></script>
-  <script src="{% static 'js/indexAuth.js' %}"></script>
+<script src="{% static 'js/api/Api.js' %}"></script>
+<script src="{% static 'js/indexAuth.js' %}"></script>
 {% endblock %}
