--- a/recipes/templates/formRecipe.html
+++ b/recipes/templates/formRecipe.html
@@ -27,12 +27,18 @@
             <p class="form__label">Теги</p>
             <div class="form__field-group">
                 <div class="tags">
-                    {% for tag in form.tags %}
-                    <div class="tags__item">
-                        <input type="checkbox" name="breakfast" id="{{ tag.id_for_label }}" class="tags__checkbox tags__checkbox_style_orange">
-                        <label for="{{ tag.id_for_label }}" class="tags__label">{{ tag }}</label>
+                    <div class="tags__item" required>
+                        <input type="checkbox" name="breakfast" id="id_breakfast" class="tags__checkbox tags__checkbox_style_orange">
+                        <label for="id_breakfast" class="tags__label">Завтрак</label>
                     </div>
-                    {% endfor %}
+                    <div class="tags__item">
+                        <input type="checkbox" name="lunch" id="id_lunch" class="tags__checkbox tags__checkbox_style_green" checked>
+                        <label for="id_lunch" class="tags__label">Обед</label>
+                    </div>
+                    <div class="tags__item">
+                        <input type="checkbox" name="dinner" id="id_dinner" class="tags__checkbox tags__checkbox_style_purple" checked>
+                        <label for="id_dinner" class="tags__label">Ужин</label>
+                    </div>
                 </div>
                 <span class="form__error"></span>
             </div>
@@ -78,7 +84,12 @@
         <div class="form__group">
             <span class="form__label">Загрузить фото</span>
             <div class="form__field-group">
-                {{ form.image }}
+                {{ form.image|addclass:"form__file-button" }}
+                {% if form.errors %}
+                    {% for error in field.errors %}
+                        <span class="form__error">{{ error|escape }}</span>
+                    {% endfor %}
+                {% endif %}
             </div>
         </div>
         {% if form.errors %}
@@ -95,6 +106,7 @@
 </div>
 {% endblock %}
 {% block scripts %}
+<script src="{% static 'js/config/config.js' %}"></script>
 <script src="{% static 'js/components/Header.js' %}"></script>
 <script src="{% static 'js/utils/debouncing.js' %}"></script>
 <script src="{% static 'js/api/Api.js' %}"></script>
