--- a/users/templates/authorRecipe.html
+++ b/users/templates/authorRecipe.html
@@ -7,21 +7,7 @@
 {% block content %}
 <div class="main__header">
     <h1 class="main__title">{{ profile.username }}</h1>
-    <ul class="tags">
-        <li class="tags__item">
-            <a id="breakfast" class="tags__checkbox tags__checkbox_style_orange tags__checkbox_active" href="#"></a>
-            <span class="tags__label">Завтрак</span>
-        </li>
-        <li class="tags__item">
-            <a id="lunch" class="tags__checkbox tags__checkbox_style_green tags__checkbox_active" href="#"></a>
-            <span for="lunch" class="tags__label">Обед</span>
-        </li>
-        <li class="tags__item">
-            <a id="dinner" class="tags__checkbox tags__checkbox_style_purple tags__checkbox_active" href="#"></a>
-            <label for="dinner" class="tags__label">Ужин</label>
-        </li>
-    </ul>
-
+    {% include "tags.html" with tags=tags %}
 </div>
 <p style="padding: 0 0 2em 0;"><a class="button button_style_light-blue" href="#">Подписаться на автора</a></p>
 <div class="card-list">
