--- a/users/templates/registration/password_change_form.html
+++ b/users/templates/registration/password_change_form.html
@@ -18,7 +18,8 @@
                 <div class="form__field-group">
                     {{ field|addclass:"form__input" }}
                     {% if field.help_text %}
-                        <span id="{{ field.id_for_label }}-help" class="form__input-info">{{ field.help_text|safe }}</span>
+                        <span id="{{ field.id_for_label }}-help"
+                         class="form__input-info">{{ field.help_text|safe }}</span>
                     {% endif %}
                     {% if form.errors %}
                         {% for error in field.errors %}
