--- a/recipes/static/blocks/single-card/__image/single-card__image.css
+++ b/recipes/static/blocks/single-card/__image/single-card__image.css
@@ -1,10 +1,8 @@
 .single-card__image {
+    object-fit: contain;
     object-fit: cover;
     align-self: flex-start;
     height: 480px;
     width: 480px;
-    left: 135px;
-    top: 128px;
-    display: block;
-    border-radius: 16px;
+    border-radius: 15px;
 }
