--- a/recipes/templates/formRecipe.html
+++ b/recipes/templates/formRecipe.html
@@ -1,5 +1,7 @@
 {% extends "base.html" %}
-{% block title %} {% if edit %} Редактирование рецепта {% else %} Создание рецепта {% endif %} {% endblock %}
+{% block title %} 
+{% if edit %} Редактирование рецепта {% else %} Создание рецепта {% endif %}
+{% endblock %}
 {% load static %}
 {% load user_filters %}
 {% block static %}
@@ -7,7 +9,8 @@
 {% endblock %}
 {% block content %}
 <div class="main__header">
-    <h1 class="main__title">{% if edit %} Редактирование рецепта {% else %} Создание рецепта {% endif %}</h1>
+    <h1 class="main__title">
+        {% if edit %} Редактирование рецепта {% else %} Создание рецепта {% endif %}</h1>
 </div>
 <div class="form-container">
     <form class="form" method="post" enctype="multipart/form-data">
@@ -36,7 +39,8 @@
                                 id="id_{{ tag_choice.instance.slug }}"
                                 class="tags__checkbox tags__checkbox_style_{{ tag_choice.instance.color }}"
                                 {% if tag_choice.instance in form.instance.tags.all %} checked {% endif %}>
-                            <label for="id_{{ tag_choice.instance.slug }}" class="tags__label">{{ tag_choice.instance.title }}</label>
+                            <label for="id_{{ tag_choice.instance.slug }}"
+                            class="tags__label">{{ tag_choice.instance.title }}</label>
                         </div>
                     {% endfor %}
                 </div>
@@ -63,7 +67,8 @@
             </div>
         </div>
         <div class="form__group">
-            <label for="{{ form.cook_time.id_for_label }}" class="form__label">Время приготовления</label>
+            <label for="{{ form.cook_time.id_for_label }}"
+             class="form__label">Время приготовления</label>
             <div class="form__field-group form__field-group_time">
                 {{ form.cook_time|addclass:"form__input" }}
                 <label for="id_time" class="form__label">минут</label>
@@ -88,7 +93,7 @@
         <div class="form__group">
             <span class="form__label">Загрузить фото</span>
             <div class="form__field-group">
-                {{ form.image|addclass:"form__file-button" }}
+                {{ form.image }}
                 {% if form.errors %}
                     {% for error in field.errors %}
                         <span class="form__error">{{ error|escape }}</span>
@@ -104,9 +109,11 @@
             {% endfor %}
         {% endif %}
         <div class="form__footer">
-            <button class="button button_style_blue">{% if edit %} Сохранить {% else %} Создать рецепт {% endif %}</button>
+            <button class="button button_style_blue">
+                {% if edit %} Сохранить {% else %} Создать рецепт {% endif %}</button>
             {% if edit %}
-                <a style="margin-left: 2.5em" href="{% url 'recipe_delete' form.instance.id %}" class="single-card__text"> Удалить </a>
+                <a style="margin-left: 2.5em" href="{% url 'recipe_delete' form.instance.id %}"
+                 class="form__ingredient-link"> Удалить </a>
             {% endif %}
         </div>
     </form>
