--- a/recipes/templates/shopList.html
+++ b/recipes/templates/shopList.html
@@ -14,16 +14,18 @@
             {% for recipe in shop_list %}
                 <li class="shopping-list__item" data-id="{{ recipe.id }}">
                     <div class="recipe recipe_reverse">
-                        <img src="{{ recipe.image.url }}" alt="{{ recipe.title }}" class="recipe__image recipe__image_big">
+                        <img src="{{ recipe.image.url }}" alt="{{ recipe.title }}"
+                         class="recipe__image recipe__image_big">
                         <h3 class="recipe__title">{{ recipe.title }}</h3>
-                        <p class="recipe__text"><span class="icon-time"></span> {{ recipe.cook_time }} мин.</p>
+                        <p class="recipe__text"><span class="icon-time"></span>
+                             {{ recipe.cook_time }} мин.</p>
                     </div>
                     <a href="#" class="shopping-list__button link">Удалить</a>
                 </li>
             {% endfor %}
         </ul>
         {% if shop_list %}
-            <button class="button button_style_blue">Скачать список</button>
+            <a href="#"><button class="button button_style_blue">Скачать список</button></a>
         {% endif %}
     </div>
 {% endblock %}
