--- a/templates/nav.html
+++ b/templates/nav.html
@@ -2,25 +2,38 @@
     <div class="nav__container container">
         {% if user.is_authenticated %}
         <ul class="nav__items list">
-            <li class="nav__item {% if index %} nav__item_active {% endif %}"><a href="{% url 'index' %}" class="nav__link link">Рецепты</a></li>
-            <li class="nav__item {% if subscriptions %} nav__item_active {% endif %}"><a href="{% url 'subscriptions' %}" class="nav__link link">Мои подписки</a></li>
-            <li class="nav__item {% if new_recipe %} nav__item_active {% endif %}"><a href="{% url 'new_recipe' %}" class="nav__link link">Создать рецепт</a></li>
-            <li class="nav__item {% if favorite_page %} nav__item_active {% endif %}"><a href="{% url 'favorite' %}" class="nav__link link">Избранное</a></li>
-            <li class="nav__item {% if shop %} nav__item_active {% endif %}"><a href="{% url 'shop_list' %}" class="nav__link link">Список покупок</a>
-            <span class="badge badge_style_blue nav__badge" id="counter">{{ shop_list.count }}</span></li>
+            <li class="nav__item {% if index %} nav__item_active {% endif %}">
+                <a href="{% url 'index' %}" class="nav__link link">Рецепты</a></li>
+            <li class="nav__item {% if subscriptions %} nav__item_active {% endif %}">
+                <a href="{% url 'subscriptions' %}" class="nav__link link">Мои подписки</a></li>
+            <li class="nav__item {% if new_recipe %} nav__item_active {% endif %}">
+                <a href="{% url 'new_recipe' %}" class="nav__link link">Создать рецепт</a></li>
+            <li class="nav__item {% if favorite_page %} nav__item_active {% endif %}">
+                <a href="{% url 'favorite' %}" class="nav__link link">Избранное</a></li>
+            <li class="nav__item {% if shop %} nav__item_active {% endif %}">
+                <a href="{% url 'shop_list' %}" class="nav__link link">Список покупок</a>
+            <span class="badge badge_style_blue nav__badge" 
+            id="counter">{{ shop_list.count }}</span></li>
         </ul>
         <ul class="nav__items list">
-            <li class="nav__item {% if passwordchange %} nav__item_active {% endif %}"><a href="{% url 'password_change' %}" class="nav__link link">Изменить пароль</a></li>
+            <li class="nav__item {% if passwordchange %} nav__item_active {% endif %}">
+                <a href="{% url 'password_change' %}" class="nav__link link">Изменить пароль</a></li>
             <li class="nav__item"><a href="{% url 'logout' %}" class="nav__link link">Выход</a></li>
         </ul>
         {% else %}
         <ul class="nav__items list">
-            <li class="nav__item {% if index %} nav__item_active {% endif %}"><a href="{% url 'index' %}" class="nav__link link">Рецепты</a></li>
-            <li class="nav__item {% if shop %} nav__item_active {% endif %}"><a href="{% url 'shop_list' %}" class="nav__link link">Список покупок <span class="badge badge_style_blue nav__badge" id="counter">4</span></a></li>
+            <li class="nav__item {% if index %} nav__item_active {% endif %}">
+                <a href="{% url 'index' %}" class="nav__link link">Рецепты</a></li>
+            <li class="nav__item {% if shop %} nav__item_active {% endif %}">
+                <a href="{% url 'shop_list' %}" class="nav__link link">Список покупок
+                     <span class="badge badge_style_blue nav__badge"
+                      id="counter">{{ shop_list.count }}</span></a></li>
         </ul>
         <ul class="nav__items list">
-            <li class="nav__item {% if signin %} nav__item_active {% endif %}"><a href="{% url 'login' %}" class="nav__link link">Войти</a></li>
-            <li class="nav__item"><a href="{% url 'signup' %}" class="button button_style_blue">Создать аккаунт</a></li>
+            <li class="nav__item {% if signin %} nav__item_active {% endif %}">
+                <a href="{% url 'login' %}" class="nav__link link">Войти</a></li>
+            <li class="nav__item">
+                <a href="{% url 'signup' %}" class="button button_style_blue">Создать аккаунт</a></li>
         </ul>
         {% endif %}
     </div>
