--- a/templates/tags.html
+++ b/templates/tags.html
@@ -5,7 +5,8 @@
             <li class="tags__item">
                 <a 
                     id="{{ tag.slug }}" 
-                    class="tags__checkbox tags__checkbox_style_{{ tag.color }} {% if tag.slug in filter_values %} tags__checkbox_active {% endif %}"
+                    class="tags__checkbox tags__checkbox_style_{{ tag.color }}
+                     {% if tag.slug in filter_values %} tags__checkbox_active {% endif %}"
                     href="{{ request.path }}?{{ request|get_filter_link:tag }}">
                 </a>
                 <span class="tags__label">{{ tag.title }}</span>
