--- a/users/templates/registration/login.html
+++ b/users/templates/registration/login.html
@@ -14,11 +14,13 @@
             {% csrf_token %}
             {% for field in form %}
                 <div class="form__group">
-                    <label for="{{ field.id_for_label }}" class="form__label">{{ field.label }}</label>
+                    <label for="{{ field.id_for_label }}"
+                     class="form__label">{{ field.label }}</label>
                     <div class="form__field-group">
                         {{ field|addclass:"form__input" }}
                         {% if field.help_text %}
-                            <span id="{{ field.id_for_label }}-help" class="form__input-info">{{ field.help_text|safe }}</span>
+                            <span id="{{ field.id_for_label }}-help"
+                             class="form__input-info">{{ field.help_text|safe }}</span>
                         {% endif %}
                         {% if form.errors %}
                             {% for error in field.errors %}
@@ -37,7 +39,8 @@
             {% endif %}
                 <div class="form__footer">
                     <button class="button button_style_blue">Войти</button>
-                    <a href="{% url 'password_reset' %}" class="form__forgot-link">Забыли пароль?</a>
+                    <a href="{% url 'password_reset' %}"
+                     class="form__forgot-link">Забыли пароль?</a>
                 </div>
         </form>
     </div>
