file download & admin settings

--- a/recipes/templates/shopList.html
+++ b/recipes/templates/shopList.html
@@ -25,7 +25,7 @@
             {% endfor %}
         </ul>
         {% if shop_list %}
-            <a href="#"><button class="button button_style_blue">Скачать список</button></a>
+            <a href="{% url 'download_shop_list' %}"><button class="button button_style_blue">Скачать список</button></a>
         {% endif %}
     </div>
 {% endblock %}
