--- a/users/templates/registration/password_reset_done.html
+++ b/users/templates/registration/password_reset_done.html
@@ -2,15 +2,16 @@
 {% block title %}Сброс пароля прошёл успешно{% endblock %}
 {% load static %}
 {% block static %}
-    <link rel="stylesheet" href="{% static 'pages/form.css' %}">
+    <link rel="stylesheet" href="{% static 'pages/index.css' %}">
 {% endblock %}
 
 {% block content %}
-<div class="main__header">
-    <h1 class="card-header">Сброс пароля прошёл успешно</h1>
-</div>
-<div class="main__header">
-    <h1 class="card-header">Проверьте свою почту, вам должно прийти письмо со ссылкой для восстановления пароля.</h1>
+<div class="custom-center-block">
+    <p class="custom-text-block">Сброс пароля прошёл успешно</p>
+    <p class="custom-text-block">Проверьте свою почту, вам должно прийти письмо со ссылкой для восстановления пароля.</p>
+    <div class="custom-button-block">
+        <button class="button button_style_blue"><a class="nav__link link" href="{% url 'index' %}">Перейти на главную</a></button>
+    </div>
 </div> 
 
 {% endblock %}
