--- a/recipes/templates/singlePage.html
+++ b/recipes/templates/singlePage.html
@@ -45,24 +45,26 @@
             </ul>
         </div>
         <ul class="single-card__items">
-            {% if recipe not in shop_list %}
-                <li class="single-card__item">
-                    <button class="button button_style_blue" name="purchpurchases" data-out>
-                        <span class="icon-plus"></span> Добавить в покупки</button></li>
-            {% else %}
-                <li class="single-card__item">
-                    <button class="button button_style_light-blue-outline" name="purchpurchases">
-                        <span class="icon-check button__icon"></span>Рецепт добавлен</button></li>
-            {% endif %}
-            {% if user.is_authenticated and user != recipe.author %}
-                {% if recipe.author not in subscriptons_list %}
+            {% if user.is_authenticated %}
+                {% if recipe not in shop_list %}
                     <li class="single-card__item">
-                        <button class="button button_style_light-blue button_size_auto"
-                         name="subscribe" data-out>Подписаться на автора</button></li>
+                        <button class="button button_style_blue" name="purchpurchases" data-out>
+                            <span class="icon-plus"></span> Добавить в покупки</button></li>
                 {% else %}
                     <li class="single-card__item">
-                        <button class="button button_style_light-blue button_size_auto button_style_light-blue-outline"
-                         name="subscribe"><span class="icon-check button__icon"></span> Отписаться от автора</button></li>
+                        <button class="button button_style_light-blue-outline" name="purchpurchases">
+                            <span class="icon-check button__icon"></span>Рецепт добавлен</button></li>
+                {% endif %}
+                {% if user != recipe.author %}
+                    {% if recipe.author not in subscriptons_list %}
+                        <li class="single-card__item">
+                            <button class="button button_style_light-blue button_size_auto"
+                            name="subscribe" data-out>Подписаться на автора</button></li>
+                    {% else %}
+                        <li class="single-card__item">
+                            <button class="button button_style_light-blue button_size_auto button_style_light-blue-outline"
+                            name="subscribe"><span class="icon-check button__icon"></span> Отписаться от автора</button></li>
+                    {% endif %}
                 {% endif %}
             {% endif %}
         </ul>
