--- a/templates/404.html
+++ b/templates/404.html
@@ -1,16 +1,16 @@
-{% extends "base.html" %}
-{% block title %}Пароль изменён{% endblock %}
+{% extends "base.html" %} 
+{% block title %} Ошибка 404 {% endblock %}
 {% load static %}
 {% block static %}
     <link rel="stylesheet" href="{% static 'pages/index.css' %}">
 {% endblock %}
-
 {% block content %}
+
 <div class="custom-center-block">
-    <p class="custom-text-block">Изменить пароль</p>
-    <p class="custom-text-block">Пароль изменён успешно</p>
+    <p class="custom-text-block">Ошибка 404</p>
     <div class="custom-button-block">
         <button class="button button_style_blue"><a class="nav__link link" href="{% url 'index' %}">Перейти на главную</a></button>
     </div>
 </div>
+
 {% endblock %}
