--- a/users/templates/registration/password_reset_complete.html
+++ b/users/templates/registration/password_reset_complete.html
@@ -2,14 +2,15 @@
 {% block title %}Пароль изменён{% endblock %}
 {% load static %}
 {% block static %}
-    <link rel="stylesheet" href="{% static 'pages/form.css' %}">
+    <link rel="stylesheet" href="{% static 'pages/index.css' %}">
 {% endblock %}
 
 {% block content %}
-<div class="main__header">
-    <h1 class="main__title">Изменить пароль</h1>
-</div>
-<div class="main__header">
-    <h1 class="card__title link">Пароль изменён успешно</h1>
+<div class="custom-center-block">
+    <p class="custom-text-block">Изменить пароль</p>
+    <p class="custom-text-block">Пароль изменён успешно</p>
+    <div class="custom-button-block">
+        <button class="button button_style_blue"><a class="nav__link link" href="{% url 'index' %}">Перейти на главную</a></button>
+    </div>
 </div>
 {% endblock %}
