--- a/users/templates/authorRecipe.html
+++ b/users/templates/authorRecipe.html
@@ -14,11 +14,11 @@
         <div class="author-subscribe" data-author="{{ profile.id }}">
             {% if profile in subscriptions_list %}
                 <p style="padding: 0 0 2em 0;">
-                    <button class="button button_style_light-blue button_size_auto button_style_light-blue-outline"
-                    name="subscribe"><span class="icon-check button__icon"></span> Отписаться от автора</button></p>
+                    <button class="button button_style_light-blue button_size_subscribe button_style_blue"
+                    name="subscribe">Отписаться от автора</button></p>
             {% else %}
                 <p style="padding: 0 0 2em 0;">
-                    <button class="button button_style_light-blue button_size_auto"
+                    <button class="button button_style_light-blue button_size_subscribe"
                     name="subscribe" data-out>Подписаться на автора</button></p>
             {% endif %}
         </div>
@@ -37,7 +37,7 @@
 <script src="{% static 'js/config/config.js' %}"></script>
 <script src="{% static 'js/components/MainCards.js' %}"></script>
 
-<script src="{% static 'js/components/Purchpurachases.js' %}"></script>
+<script src="{% static 'js/components/Purchases.js' %}"></script>
 <script src="{% static 'js/components/Favorites.js' %}"></script>
 <script src="{% static 'js/components/Subscribe.js' %}"></script>
 <script src="{% static 'js/components/AuthorRecipe.js' %}"></script>
