--- a/users/templates/myFollow.html
+++ b/users/templates/myFollow.html
@@ -53,7 +53,7 @@
 {% endblock %}
 {% block scripts %}
     <script src="{% static 'js/config/config.js' %}"></script>
-    <script src="{% static 'js/components/Purchpurachases.js' %}"></script>
+    <script src="{% static 'js/components/Purchases.js' %}"></script>
     <script src="{% static 'js/components/Favorites.js' %}"></script>
     <script src="{% static 'js/components/Subscribe.js' %}"></script>
     <script src="{% static 'js/components/MainCards.js' %}"></script>
