--- a/recipes/templates/favorite.html
+++ b/recipes/templates/favorite.html
@@ -22,7 +22,7 @@
 <script src="{% static 'js/config/config.js' %}"></script>
 <script src="{% static 'js/components/MainCards.js' %}"></script>
 
-<script src="{% static 'js/components/Purchpurachases.js' %}"></script>
+<script src="{% static 'js/components/Purchases.js' %}"></script>
 <script src="{% static 'js/components/Favorites.js' %}"></script>
 
 <script src="{% static 'js/components/CardList.js' %}"></script>
