--- a/recipes/templates/index.html
+++ b/recipes/templates/index.html
@@ -22,7 +22,7 @@
 {% block scripts %}
     <script src="{% static 'js/config/config.js' %}"></script>
     <script src="{% static 'js/components/MainCards.js' %}"></script>
-    <script src="{% static 'js/components/Purchpurachases.js' %}"></script>
+    <script src="{% static 'js/components/Purchases.js' %}"></script>
     {% if user.is_authenticated %}
         <script src="{% static 'js/components/Favorites.js' %}"></script>
     {% endif %}
