--- a/recipes/templates/singlePage.html
+++ b/recipes/templates/singlePage.html
@@ -48,22 +48,22 @@
             {% if user.is_authenticated %}
                 {% if recipe not in shop_list %}
                     <li class="single-card__item">
-                        <button class="button button_style_blue" name="purchpurchases" data-out>
+                        <button class="button button_style_blue" name="purchases" data-out>
                             <span class="icon-plus"></span> Добавить в покупки</button></li>
                 {% else %}
                     <li class="single-card__item">
-                        <button class="button button_style_light-blue-outline" name="purchpurchases">
+                        <button class="button button_style_light-blue-outline" name="purchases">
                             <span class="icon-check button__icon"></span>Рецепт добавлен</button></li>
                 {% endif %}
                 {% if user != recipe.author %}
                     {% if recipe.author not in subscriptons_list %}
                         <li class="single-card__item">
-                            <button class="button button_style_light-blue button_size_auto"
+                            <button class="button button_style_light-blue button_size_subscribe"
                             name="subscribe" data-out>Подписаться на автора</button></li>
                     {% else %}
                         <li class="single-card__item">
-                            <button class="button button_style_light-blue button_size_auto button_style_light-blue-outline"
-                            name="subscribe"><span class="icon-check button__icon"></span> Отписаться от автора</button></li>
+                            <button class="button button_style_light-blue button_size_subscribe button_style_blue"
+                            name="subscribe">Отписаться от автора</button></li>
                     {% endif %}
                 {% endif %}
             {% endif %}
@@ -86,7 +86,7 @@
 {% endblock %}
 {% block scripts %}
 <script src="{% static 'js/config/config.js' %}"></script>
-<script src="{% static 'js/components/Purchpurachases.js' %}"></script>
+<script src="{% static 'js/components/Purchases.js' %}"></script>
 {% if user.is_authenticated %}
     <script src="{% static 'js/components/Favorites.js' %}"></script>
     <script src="{% static 'js/components/Subscribe.js' %}"></script>
