--- a/recipes/templates/singlePage.html
+++ b/recipes/templates/singlePage.html
@@ -13,7 +13,7 @@
             <h1 class="single-card__title">{{ recipe.title }}</h1>
             {% if user.is_authenticated %}
                 <div class="single-card__favorite">
-                    {% if favorite %}
+                    {% if recipe in favorites_list %}
                         <button class="button button_style_none" name="favorites">
                             <span class="icon-favorite icon-favorite_big icon-favorite_active"></span></button>
                         <div class="single-card__favorite-tooltip tooltip">Удалить из избранного</div>
